# pibtinput

./: .gitignore  README.md  a.txt  mise.toml  pyproject.toml
archives/: 20251028-234426-Plan-done.md
docs/: Memo-bt.md
src/pibtinput/: __init__.py  __main__.py  cmd_input.py  cmd_list.py  cmd_listdevs.py  pibtinput.py
src/pibtinput/utils/: clibase.py
tests/: _testbase_cli.py
